<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/hText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/headerEntryCaption" />

        <Button
            android:id="@+id/buttonHeaderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/buttonDone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerName" />

        <EditText
            android:id="@+id/hNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintHeaderName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerCat" />

        <EditText
            android:id="@+id/hCatEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintHeaderCat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerDesc" />

        <EditText
            android:id="@+id/hDescEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintHeaderDesc"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/headerWarnings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/headerLimitDaily" />

                <EditText
                    android:id="@+id/hDLimitEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintZeroMoney"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/headerLimitWeekly" />

                <EditText
                    android:id="@+id/hWLimitEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintZeroMoney"
                    android:inputType="numberDecimal|textNoSuggestions" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/headerLimitMonthly" />

                <EditText
                    android:id="@+id/hMLimitEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descHeaderMonthlyLimit"
                    android:gravity="center_vertical"
                    android:hint="@string/hintZeroMoney"
                    android:inputType="numberDecimal|text" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>