<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp" >

    <Button
        android:id="@+id/buttonQNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:text="@string/buttonNow"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvQTrans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:gravity="center"
        android:hint="@string/hintHeaderName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etQAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:hint="@string/hintZeroMoney"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/buttonQTransAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:text="@string/buttonTransEntry"
        android:textSize="20sp" />

</LinearLayout>