<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/transEntryCaption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="5dp" >

        <Spinner
            android:id="@+id/spinTransHeadList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <Button
            android:id="@+id/buttonTransAddHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:text="@string/buttonTransEntry"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tvTransDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="none"
            android:shadowDx="2"
            android:shadowDy="2"
            android:textSize="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTransAmnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:ems="10"
        android:hint="@string/hintZeroMoney"
        android:inputType="numberDecimal"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/editTransDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintTransDesc"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonTransAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDone"
        android:textSize="25dp" />

</LinearLayout>